# IPCOne2N

./: CMakeLists.txt  README.md
ipc12n/: CMakeLists.txt
ipc12n/include/: ipc12n_config.h
ipc12n/include/client/: ipc12n_client.h
ipc12n/include/internal/: ipc12n_exec_process.h  ipc12n_fd_operation.h  ipc12n_opt_counter.h  ipc12n_opt_scanner.h  ipc12n_socket_pair.h
ipc12n/include/server/: ipc12n_server.h
ipc12n/src/: main.c
ipc12n/src/internal/: ipc12n_exec_process.c  ipc12n_fd_operation.c  ipc12n_opt_counter.c  ipc12n_opt_scanner.c  ipc12n_socket_pair.c
ipc12n/test/: CMakeLists.txt  client_test.c  server_test.c
